--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <h1>Datos desde API</h1>
-    <pre id="contenido">Cargando datos...</pre>
+    <pre id="contenido">Cargandoooo datos...</pre>
 
     <script>
         async function cargarDatos() {
