--- a/index.html
+++ b/index.html
@@ -4,43 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Datos desde API</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-
-        pre {
-            background-color: #f4f4f4;
-            padding: 10px;
-            border-radius: 5px;
-            overflow-x: auto;
-        }
-    </style>
+    <title>Noticias</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Datos desde API</h1>
-    <pre id="contenido">Cargandoooo datos...</pre>
+    <div class="container">
+        <h1>Últimas Noticias</h1>
 
-    <script>
-        async function cargarDatos() {
-            try {
-                const response = await fetch("https://am2xxr9k5i.execute-api.us-west-2.amazonaws.com/prod/public");
-                const data = await response.json();
+        <div class="news-section">
+            <h2>Noticias CDN</h2>
+            <div id="cdn-news" class="news-container"></div>
+        </div>
 
-                console.log("Datos recibidos:", data);
-                document.getElementById("contenido").innerText = JSON.stringify(data, null, 2);
-            } catch (error) {
-                console.error("Error cargando datos:", error);
-                document.getElementById("contenido").innerText = "Error cargando datos.";
-            }
-        }
+        <div class="news-section">
+            <h2>Noticias El País</h2>
+            <div id="elpais-news" class="news-container"></div>
+        </div>
+    </div>
 
-        // Llamar a la API al cargar la página
-        cargarDatos();
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
