--- a/index.html
+++ b/index.html
@@ -12,14 +12,16 @@
     <div class="container">
         <h1>Últimas Noticias</h1>
 
-        <div class="news-section">
-            <h2>Noticias CDN</h2>
-            <div id="cdn-news" class="news-container"></div>
-        </div>
+        <div class="news-sections-container">
+            <div class="news-section">
+                <h2>Noticias CDN</h2>
+                <div id="cdn-news" class="news-container"></div>
+            </div>
 
-        <div class="news-section">
-            <h2>Noticias El País</h2>
-            <div id="elpais-news" class="news-container"></div>
+            <div class="news-section">
+                <h2>Noticias El País</h2>
+                <div id="elpais-news" class="news-container"></div>
+            </div>
         </div>
     </div>
 
