modified:   index.html

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
         <div class="news-sections-container">
             <div class="news-section">
-                <h2>Noticias CDN</h2>
+                <h2>Noticias de CDN</h2>
                 <div id="cdn-news" class="news-container"></div>
             </div>
 
             <div class="news-section">
-                <h2>Noticias El País</h2>
+                <h2>Noticias de El País</h2>
                 <div id="elpais-news" class="news-container"></div>
             </div>
         </div>
